<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background">

    <include layout="@layout/head_layout"
        android:id="@+id/header"/>

    <com.wly.onedemo.view.BottomScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:id="@+id/scroll_movie_detail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_movie_detail">


            <!--标题图片-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_image_height"
                android:id="@+id/rl_movie_title_image">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/iv_movie_title_image"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true" />

                <TextView
                    android:layout_width="@dimen/author_avatar_width"
                    android:layout_height="@dimen/author_avatar_width"
                    android:id="@+id/tv_movie_score"
                    android:background="@color/black_aplae"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"/>

            </RelativeLayout>

            <!--评分布局-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/rl_movie_score"
                android:background="@drawable/head_background"
                android:padding="@dimen/dp_10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/movie_ticket"
                    android:layout_centerVertical="true"
                    android:id="@+id/iv_movie_ticket"
                    android:layout_marginLeft="@dimen/dp_5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_grade_score"
                    android:textColor="@color/sub_title_color"
                    android:text="@string/movie_score"
                    android:layout_toLeftOf="@+id/ll_movie_share"
                    android:textSize="@dimen/little_text_font"
                    android:drawableLeft="@mipmap/score"
                    android:gravity="center_vertical"
                    android:drawablePadding="@dimen/dp_5"
                    android:layout_centerVertical="true"
                    android:visibility="visible"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_alignParentRight="true"
                    android:id="@+id/ll_movie_share"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/iv_movie_share"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/share" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/ll_movie_share_method"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_movie_score_share"
                            android:text="@string/share_score"
                            android:textSize="@dimen/little_text_font"
                            android:textColor="@color/sub_title_color"
                            android:layout_marginRight="@dimen/dp_15"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_movie_other_share"
                            android:text="@string/share_others"
                            android:textSize="@dimen/little_text_font"
                            android:textColor="@color/sub_title_color"/>

                    </LinearLayout>

                </RelativeLayout>

            </RelativeLayout>

            <!--文章内容-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gary_background"
                    android:padding="@dimen/dp_10"
                    android:text="电影故事"
                    android:textColor="@color/sub_title_color"
                    android:textSize="@dimen/little_text_font"/>

                <!--故事正文-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--作者布局-->
                    <include layout="@layout/author_layout"/>

                    <!--故事内容-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/dp_10">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dp_15"
                            android:id="@+id/tv_movie_story_title"
                            android:textColor="@color/news_detail_color"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_movie_story_detail"
                            android:textColor="@color/news_detail_color"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <!--电影信息-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_movie_info">
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl_loadMore"
                android:padding="@dimen/dp_15"
                android:gravity="center_horizontal"
                android:background="@color/gary_background"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:id="@+id/loadmore_progress"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/tabs_selector_color"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_toRightOf="@+id/loadmore_progress"
                    android:layout_centerHorizontal="true"
                    android:text="@string/load_more"/>

            </RelativeLayout>

            <!--评论-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_comment">
            </FrameLayout>

        </LinearLayout>

    </com.wly.onedemo.view.BottomScrollView>

</RelativeLayout>
